--- a/app/assets/stylesheets/tasks/tasks.scss
+++ b/app/assets/stylesheets/tasks/tasks.scss
@@ -9,6 +9,7 @@
 
 .main-top {
   display: flex;
+  align-items: center;
 
   &__title {
     @extend %default-title;
@@ -27,26 +28,83 @@
       }
     }
   }
-  &__room-unit{
-    margin-left: 2rem;
+  &__link a{
+    font-size: 20px;
+    margin-left: auto;
+    color: $thema-color3;
+    text-decoration: none;
+    transition-duration: 0.5s;
 
-    &__btn {
-      @extend %default-btn;
-      color: $base-color1;
-      background-color: $thema-color3-light;
-      margin: 2rem auto;
-
-      &:hover {
-        background-color: $thema-color3;
-      }
+    &:hover {
+      color: $thema-color2-dark;
     }
   }
-  &__link {
+  &__room-unit{
     margin-left: auto;
 
-    & a {
-      color: $thema-color3;
-      text-decoration: none;
+    &__head {
+      margin: 0 2rem;
+      position: relative;
+    }
+  }
+}
+
+.room-box {
+  width: 18rem;
+  height: auto;
+  background-color: $base-color3;
+  padding: 1rem 1rem 4rem;
+  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  right: 2rem;
+  top: 9rem;
+  z-index: 2;
+  display: none;
+
+  &__lead {
+    font-weight: bold;
+  }
+  &__list {
+    border: 1px solid $base-color2;
+    padding: 1rem;
+
+    &__head {
+      display: flex;
+      align-items: center;
+    }
+
+    &__image{
+      width: 3rem;
+      height: 3rem;
+      border-radius: 50%;
+
+      & img {
+        width: inherit;
+        height: inherit;
+        object-fit: cover;
+      }
+    }
+    &__item {
+       margin: 0.5rem;
+
+       &--bold {
+         font-size: 1.2rem;
+         font-weight: bold;
+         margin: 0.5rem;
+       }
+    }
+  }
+  &__btn {
+    @extend %default-btn;
+    color: $base-color1;
+    background-color: $thema-color3-light;
+    position: absolute;
+    right: 1rem;
+    left: 1rem;
+    bottom: 1rem;
+
+    &:hover {
+      background-color: $thema-color3;
     }
   }
 }
@@ -70,7 +128,7 @@
     border: 1px solid $thema-color1;
     border-radius: 0.8rem;
     text-decoration: none;
-    padding: 0.3rem;
+    padding: 0.3rem 0.5rem;
     margin-right: 0.2rem;
     transition: .3s;
 
