--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -3,6 +3,7 @@
     <%= render 'tasks/template-tasks', {template_tasks: @template_tasks, tag_list: @tag_list} %>
   </div>
   <h1 class="task-form-container__title">新規タスク作成</h1>
+  <%= render 'devise/shared/error_messages', resource: @task %>
   <div class="new-task-form">
     <%= render 'tasks/task_form', task: @task %>
   </div>
