--- a/app/views/tasks/change_progress.js.erb
+++ b/app/views/tasks/change_progress.js.erb
@@ -1,3 +1,14 @@
 $(".task-<%= @task.id %>").html("<%= j(render 'tasks/task-card', task: @task ) %>");
 
-$(".modal").html("<%= j(render 'tasks/show', task: @task, message: @message ) %>");
+$("#modal").html("<%= j(render 'tasks/show', { task: @task, message: @message } ) %>");
+$('#tab-contents .tab[id != "tab1"]').hide();
+
+if ("<%= @task.progress %>" === "完了") {
+  $("#modal-2").removeClass('hidden');
+  $("#mask-2").removeClass('hidden');
+  $("#modal-2").html("<%= j(render 'tasks/result', task: @task) %>");
+  setTimeout('$(".result-monster__mark").removeClass("mark-hidden")', 1000)
+  $("#mask-2").on('click', function(){
+    $("#modal-2, #mask-2").addClass('hidden');
+  });
+}
