--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -35,3 +35,8 @@
 <div id="modal" class="hidden">
   <p>モーダルウィンドウ<p>
 </div>
+
+<div id="mask-2" class="hidden"></div>
+<div id="modal-2" class="hidden">
+  <p>モーダルウィンドウ2<p>
+</div>
