--- a/app/assets/stylesheets/share/_variables.scss
+++ b/app/assets/stylesheets/share/_variables.scss
@@ -13,7 +13,7 @@
 // フォントセット
   $font-family1: 'Gurmukhi MN','Roman','ヒラギノ明朝 ProN','Hiragino Mincho ProN','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体',sans-serif;
   $font-family2: 'Hannotate SC','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','Meiryo UI',sans-serif;
-
+  $font-family3: 'Helvetica Neue','Helvetica','Arial',sans-serif;
 // ボタン
 %default-btn {
   text-decoration: none;
