--- a/app/views/tasks/_slide-inner.html.erb
+++ b/app/views/tasks/_slide-inner.html.erb
@@ -5,10 +5,15 @@
   <% end %>
 </div>
 
-<% template_tasks.includes([:genre]).each do |t_task| %>
-<div class="t-task-card">
-  <%= link_to "", new_task_path(template: t_task.id), remote: true, class: "fas fa-plus-circle t-task-card__link" %>
-  <div class="t-task-card__genre"><%= t_task.genre.name %></div>
-  <div class="t-task-card__body"><%= t_task.body %></div>
+<div class="t-task-card-wrapper">
+  <% template_tasks.includes([:genre]).each do |t_task| %>
+  <div class="t-task-card">
+    <%= link_to "", new_task_path(template: t_task.id, area: "form"), remote: true, class: "fas fa-plus-circle t-task-card__link" %>
+    <div class="t-task-card__genre"><%= t_task.genre.name %></div>
+    <div class="t-task-card__body"><%= t_task.body %></div>
+  </div>
+  <% end %>
 </div>
-<% end %>
+<div>
+  <%= paginate template_tasks, remote: true %>
+</div>
