--- a/app/views/tasks/_slide-inner.html.erb
+++ b/app/views/tasks/_slide-inner.html.erb
@@ -11,6 +11,8 @@
     <%= link_to "", new_task_path(template: t_task.id, area: "form"), remote: true, class: "fas fa-plus-circle t-task-card__link" %>
     <div class="t-task-card__genre"><%= t_task.genre.name %></div>
     <div class="t-task-card__body"><%= t_task.body %></div>
+    <%= link_to "", template_tasks_path(id: t_task.id), method: :delete, remote: true, class: "fas fa-trash-alt t-task-card__delete" %>
+
   </div>
   <% end %>
 </div>
