--- a/app/assets/stylesheets/share/_variables.scss
+++ b/app/assets/stylesheets/share/_variables.scss
@@ -41,7 +41,6 @@
   font-family: $font-family1;
   font-size: 30px;
 }
-
 // フォーム
 %default-form-group {
   width: 50vw;
@@ -110,7 +109,15 @@
   left: 0;
   z-index: 5;
 }
-
+#mask-3 {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 3;
+}
 #modal {
   position: fixed; // モーダルを固定
   top: 15vh;
@@ -135,19 +142,16 @@
   z-index: 6;  // マスクより上に配置
   width: 700px;
 }
-
 // hiddenクラスで最初は表示されないようにする
-#mask.hidden, #mask-2.hidden {
+#mask.hidden, #mask-2.hidden, #mask-3.hidden {
   opacity: 0;
   visibility: hidden;
 }
-
 #modal.hidden, #modal-2.hidden {
   opacity: 0;
   visibility: hidden;
   transform: translate(0, 0) scale(0.8);   // 大きさ0.8倍から等倍にモーダルが拡大される
 }
-
 /* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
 @media screen and (max-width:768px) {
   %default-input, %default-textarea {
