--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -8,4 +8,29 @@
     <%= render 'tasks/task_form', task: @task %>
   </div>
 </div>
-<div id= "mask" class="hidden"></div>
+<div id= "mask-3" class="hidden"></div>
+
+<script>
+  var mask_3 = document.getElementById('mask-3');
+  var slideL = document.getElementById('slideL');
+  var div = document.querySelector('.template-task-container')
+
+  $('.card_link').on('click', function (){
+    mask_3.classList.add('hidden');
+    slideL.classList.add('off');
+    div.animate({marginLeft: '0rem'}, {duration: 300,fill: 'forwards'}, 300)
+  });
+
+  // クリックで表示
+  slideL.addEventListener('click', function() {
+    if(slideL.classList.contains('off')){
+      document.getElementById('mask-3').classList.remove('hidden');
+      document.getElementById('slideL').classList.remove('off');
+      document.querySelector('.template-task-container').animate({marginLeft: '38rem'}, {duration: 300, fill: 'forwards'}, 300);
+    }else{
+      document.getElementById('mask-3').classList.add('hidden');
+      document.getElementById('slideL').classList.add('off');
+      document.querySelector('.template-task-container').animate({marginLeft: '0rem'}, {duration: 300, fill: 'forwards'}, 300);
+    }
+  }, false);
+</script>
