[fix]タスクを保留処理できないバグを修正

--- a/app/views/tasks/_result.html.erb
+++ b/app/views/tasks/_result.html.erb
@@ -1,3 +1,4 @@
+<% if @task.progress == "完了" %>
 <div class="result-section">
   <h1 class="result-section__head">タスクを達成しました！！</h1>
   <div class="result-section__lead">
@@ -20,3 +21,4 @@
     </div>
   </div>
 </div>
+<% end %>
