--- a/app/views/monsters/index.html.erb
+++ b/app/views/monsters/index.html.erb
@@ -27,7 +27,7 @@
     </div>
     <div class="monster-form-wrapper__form-group">
       <div class="monster-form-wrapper__form-group__label"><%= f.label :memo, '説明' %></div>
-      <div class="monster-form-wrapper__form-group__field--large"><%= f.text_field :memo %></div>
+      <div class="monster-form-wrapper__form-group__field--large"><%= f.text_area :memo %></div>
     </div>
     <div class="monster-form-wrapper__form-group">
       <%= f.submit "作成", class: "monster-form-wrapper__form-group__btn" %>
