--- a/app/assets/stylesheets/share/header.scss
+++ b/app/assets/stylesheets/share/header.scss
@@ -19,17 +19,21 @@
   }
 }
 
-.nav {
+nav {
+  margin: 0 1rem 0 auto;
+}
+
+.nav-block {
   list-style: none;
-  margin: 0 2rem 0 auto;
   display: flex;
 
   &__item {
-    padding: 0 1.5rem;
+    padding: 0 1rem;
+    text-align: center;
 
     & a {
-    color: $thema-color3;
-    text-decoration: none;
+      color: $thema-color3;
+      text-decoration: none;
 
       &:hover {
         color: $thema-color2-dark;
@@ -44,4 +48,30 @@
   position: relative;
   left: 1.5rem;
   top: 0.5rem;
+}
+
+
+/* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
+@media screen and (max-width:768px) {
+  nav {
+    background-color: $base-color3;
+    padding: 1rem;
+    position: absolute;
+    top: 3.5rem;
+    right: 0;
+  }
+
+  .nav-block {
+    list-style: none;
+    flex-direction: column;
+
+    &__item {
+      padding: 0 1rem;
+    }
+  }
+
+  .notifications-icon {
+    left: 0.5rem;
+    top: 1.5rem;
+  }
 }
