--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,7 @@
   <%= link_to root_path, class: "header__logo" do %>
     <%= image_tag 'logo.png' %>
   <% end %>
+  <div class="humverger-icon"><a href="#" class="fas fa-bars"></a></div>
   <nav id="nav">
     <ul class="nav-block">
       <% if user_signed_in? %>
