--- a/app/assets/stylesheets/share/header.scss
+++ b/app/assets/stylesheets/share/header.scss
@@ -60,7 +60,7 @@ nav {
   top: 0.5rem;
 }
 
-
+/*レスポンシブ */
 /* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
 @media screen and (max-width:768px) {
   .humverger-icon {
