[Design]Topレイアウト調整

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,9 @@
 <div class="top-container">
   <div class="visual-wrapper">
     <p class="visual-wrapper__subtitle">感謝の気持ちを伝える</p>
-    <p class="visual-wrapper__title">「家事大変なのにいつもありがとう」</p>
+    <p class="visual-wrapper__title"><span>「家事大変なのに</span><span>いつもありがとう」</span></p>
     <p class="visual-wrapper__subtitle">楽しく家事をする</p>
-    <p class="visual-wrapper__title">「苦手な家事もこれなら頑張れそう」</p>
+    <p class="visual-wrapper__title"><span>「苦手な家事も</span><span>これなら頑張れそう」</span></p>
     <p class="visual-wrapper__bottom">を叶えるタスク管理サイト</p>
 
     <p class="visual-wrapper__btn-area"><%= link_to 'ログイン', new_user_session_path, class: "visual-wrapper__btn" %></p>
