--- a/app/assets/stylesheets/tasks/_task-card.scss
+++ b/app/assets/stylesheets/tasks/_task-card.scss
@@ -47,7 +47,6 @@
       right: 0;
     }
   }
-
   &__inner {
     width: 30rem;
     height: 130px;
@@ -71,6 +70,35 @@
       -webkit-box-orient: vertical;
       -webkit-line-clamp: 5;
       overflow: hidden;
+    }
+  }
+}
+
+/* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
+@media screen and (max-width:768px) {
+  .task-card {
+    width: 25rem;
+
+    &__inner {
+      width: 25rem;
+
+      &__body {
+        width: 15rem;
+      }
+    }
+  }
+}
+
+/* スマートフォンサイズ（425px）以下の際に適用される設定 */
+@media screen and (max-width:425px) {
+  .task-card {
+    width: 20rem;
+
+    &__inner {
+
+      &__body {
+        width: 18rem;
+      }
     }
   }
 }
