[Design]task showレスポンシブ途中のコミット

--- a/app/assets/stylesheets/tasks/_task-show.scss
+++ b/app/assets/stylesheets/tasks/_task-show.scss
@@ -18,6 +18,9 @@
   &__right {
     width: 300px;
   }
+  &__bottom {
+    display: none;
+  }
 }
 
 // task tab
@@ -102,7 +105,7 @@
 // monster tab
 .task-monster {
   width: inherit;
-  height: inherit;
+  height: 384px;
   position: relative;
 
   &__visual-area {
@@ -135,6 +138,12 @@
     font-size: 2rem;
     font-family: $font-family2;
     margin-bottom: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+
+    & :last-child {
+      margin-left: auto;
+    }
 
     &--large {
       font-size: 2rem;
@@ -267,4 +276,58 @@
 
 #tab-contents p {
   color: $thema-color3;
+}
+
+#tab3, #tab3-hide {
+  display: none;
+}
+
+/* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
+@media screen and (max-width:768px) {
+
+  .task-section {
+
+    &__right {
+      display: none;
+      position: relative;
+    }
+  }
+
+  .task-unit__body {
+    margin: 0 auto 1rem;
+  }
+
+  #tab3 {
+    display: block;
+  }
+
+  .task-section__bottom {
+    display: flex;
+
+    &__btn {
+      font-size: 3rem;
+      color: $thema-color3;
+      position: absolute;
+      right: 0;
+    }
+  }
+
+  #tab3-hide {
+    display: inline;
+  }
+
+  #tab-contents .tab {
+    height: 444px;
+    overflow: auto;
+    padding: 15px;
+  }
+
+  .action-area {
+
+  }
+}
+
+/* 600px以下の際に適用される設定 */
+@media screen and (max-width:600px) {
+
 }
