--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -21,7 +21,7 @@
     <h1 class="main-top__title">タスク一覧</h1>
     <div class="main-top__link">
       <%= link_to new_task_path , class: "fas fa-plus-circle" do %>
-        <span>新規タスク作成</span>
+        新規<span>タスク</span>作成
       <% end %>
     </div>
   </div>
