--- a/app/assets/stylesheets/share/_variables.scss
+++ b/app/assets/stylesheets/share/_variables.scss
@@ -152,9 +152,14 @@
   visibility: hidden;
   transform: translate(0, 0) scale(0.8);   // 大きさ0.8倍から等倍にモーダルが拡大される
 }
+
 /* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
 @media screen and (max-width:768px) {
   %default-input, %default-textarea {
     width: 100%;
   }
+  #modal {
+    width: 500px;
+  }
+
 }
