task一覧のレスポンシブ完了

--- a/app/assets/stylesheets/share/_variables.scss
+++ b/app/assets/stylesheets/share/_variables.scss
@@ -161,5 +161,11 @@
   #modal {
     width: 500px;
   }
+}
 
+/* 600px以下の際に適用される設定 */
+@media screen and (max-width:768px) {
+  #modal {
+    width: 400px;
+  }
 }
