--- a/app/assets/stylesheets/tasks/_task-show.scss
+++ b/app/assets/stylesheets/tasks/_task-show.scss
@@ -321,13 +321,16 @@
     overflow: auto;
     padding: 15px;
   }
-
-  .action-area {
-
-  }
 }
 
 /* 600px以下の際に適用される設定 */
 @media screen and (max-width:600px) {
+  .task-section__left {
+    width: 400px;
+    margin: 0 auto;
+  }
 
+  .task-unit__body {
+    width: 350px;
+  }
 }
