[Design]テンプレタスクのレスポンシブ対応完了

--- a/app/views/tasks/_template-tasks.html.erb
+++ b/app/views/tasks/_template-tasks.html.erb
@@ -1,6 +1,9 @@
 <div class="template-task-container">
-  <span class="template-task-container__icon off" id="slideL">テンプレート一覧</span>
-  <div class="template-task-container__card-area slide-inner">
+  <span class="template-task-container__sticky off" id="slideL">
+    <span class="template-task-container__sticky--icon"><i class="far fa-copy"></i></span>
+    <span class="template-task-container__sticky--word">テンプレート一覧</span>
+  </span>
+  <div class="template-task-container__card-area slide-inner" id="slideL_width">
     <%= render 'tasks/slide-inner', {tag: tag, template_tasks: template_tasks, tag_list: tag_list}  %>
   </div>
 </div>
