--- a/app/assets/stylesheets/tasks/_task-show.scss
+++ b/app/assets/stylesheets/tasks/_task-show.scss
@@ -324,7 +324,7 @@
 }
 
 /* 600px以下の際に適用される設定 */
-@media screen and (max-width:600px) {
+@media screen and (mafx-width:600px) {
   .task-section__left {
     width: 400px;
     margin: 0 auto;
