--- a/app/assets/stylesheets/tasks/_task-card.scss
+++ b/app/assets/stylesheets/tasks/_task-card.scss
@@ -15,7 +15,7 @@
   height: 150px;
   background-color: $base-color3;
   box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.5);
-  margin: 0 20px 30px 0;
+  margin: 0 1rem 2rem;
   position: relative;
 
   &__head {
